--- a/apache2/Rakefile
+++ b/apache2/Rakefile
@@ -2,6 +2,8 @@ require 'rake'
 
 require 'rspec/core/rake_task'
 
+require 'puppet-lint/tasks/puppet-lint'
+
 RSpec::Core::RakeTask.new(:spec) do |t|
   t.pattern = 'spec/*/*_spec.rb'
 end
